--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2020", "dom"],
     "paths": {
-      "ngx-cookie-service": ["dist/ngx-cookie-service/ngx-cookie-service", "dist/ngx-cookie-service"]
+      "ngx-cookie-service": [
+        "dist/ngx-cookie-service/ngx-cookie-service",
+        "dist/ngx-cookie-service"
+      ],
+      "ngx-cookie-service-ssr": [
+        "dist/ngx-cookie-service-ssr"
+      ]
     }
   },
   "angularCompilerOptions": {
