--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: ['ubuntu-latest']
-        node: ['14','16', '18']
+        node: ['14']
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node }}
