--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^14.0.0-rc.0",
+    "ng-packagr": "^14.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.3"
   }
 }
