--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,10 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": ["projects/ngx-cookie-service/**/*.ts", "projects/ngx-cookie-service/**/*.html"]
+            "lintFilePatterns": [
+              "projects/ngx-cookie-service/**/*.ts",
+              "projects/ngx-cookie-service/**/*.html"
+            ]
           }
         }
       }
