--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build and Test Project
 
 on:
   push:
@@ -20,13 +20,13 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - name: Install dependencies
-        run: npm i --force
+        run: npm i --legacy-peer-deps
       - name: Lint
         run: npm run lint
       - name: Format check
         run: npm run format:check
       - name: Build
-        run: npm run build --configuration=production
+        run: npm run build --configuration=production && npm run build:ngx-cookie-service-ssr --configuration=production
       - name: Test
         run: npm run test --configuration=ci
         env:
