--- a/.github/workflows/npm_publish_ssr.yml
+++ b/.github/workflows/npm_publish_ssr.yml
@@ -1,4 +1,4 @@
-name: Publish to NPM
+name: Publish ngx-cookie-service-ssr to NPM
 on:
   push:
     ### Publish on new tag release
@@ -12,12 +12,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli @angular/core
       - name: Install NPM Dependencies
-        run: npm ci --force
+        run: npm i --legacy-peer-deps
       - name: Build project
-        run: ng build --configuration production --project=ngx-cookie-service-ssr
+        run: npm run build --configuration production --project=ngx-cookie-service-ssr
       - name: Publish to NPM
         uses: JS-DevTools/npm-publish@v1
         with:
