--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -21,6 +21,7 @@
     "angular-12",
     "angular-13",
     "angular-14",
+    "angular-15",
     "ivy",
     "ivy-compatible",
     "ivy-compilation",
@@ -78,8 +79,8 @@
     "email": "stepan@studytube.nl"
   },
   "peerDependencies": {
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0"
+    "@angular/common": "^15.0.0-rc.0",
+    "@angular/core": "^15.0.0-rc.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
