--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0-rc.0",
-    "@angular/common": "^15.0.0-rc.0",
-    "@angular/compiler": "^15.0.0-rc.0",
-    "@angular/core": "^15.0.0-rc.0",
-    "@angular/forms": "^15.0.0-rc.0",
-    "@angular/platform-browser": "^15.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^15.0.0-rc.0",
-    "@angular/router": "^15.0.0-rc.0",
-    "@nguniversal/express-engine": "^14.0.0",
+    "@angular/animations": "^15.0.0-rc.1",
+    "@angular/common": "^15.0.0-rc.1",
+    "@angular/compiler": "^15.0.0-rc.1",
+    "@angular/core": "^15.0.0-rc.1",
+    "@angular/forms": "^15.0.0-rc.1",
+    "@angular/platform-browser": "^15.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^15.0.0-rc.1",
+    "@angular/router": "^15.0.0-rc.1",
+    "@nguniversal/express-engine": "^15.0.0-next.0",
     "rxjs": "^7.5.5",
     "tslib": "^2.4.0",
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0-rc.0",
+    "@angular-devkit/build-angular": "^15.0.0-rc.1",
     "@angular-eslint/builder": "14.0.0",
     "@angular-eslint/eslint-plugin": "14.0.0",
     "@angular-eslint/eslint-plugin-template": "14.0.0",
     "@angular-eslint/schematics": "14.0.0",
     "@angular-eslint/template-parser": "14.0.0",
-    "@angular/cli": "^15.0.0-rc.0",
-    "@angular/compiler-cli": "^15.0.0-rc.0",
-    "@angular/language-service": "^15.0.0-rc.0",
+    "@angular/cli": "^15.0.0-rc.1",
+    "@angular/compiler-cli": "^15.0.0-rc.1",
+    "@angular/language-service": "^15.0.0-rc.1",
     "prettier": "^2.7.1",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
