--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0-next.0",
-    "@angular/common": "^16.0.0-next.0",
-    "@angular/compiler": "^16.0.0-next.0",
-    "@angular/core": "^16.0.0-next.0",
-    "@angular/forms": "^16.0.0-next.0",
-    "@angular/platform-browser": "^16.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^16.0.0-next.0",
-    "@angular/router": "^16.0.0-next.0",
+    "@angular/animations": "^16.0.0-rc.0",
+    "@angular/common": "^16.0.0-rc.0",
+    "@angular/compiler": "^16.0.0-rc.0",
+    "@angular/core": "^16.0.0-rc.0",
+    "@angular/forms": "^16.0.0-rc.0",
+    "@angular/platform-browser": "^16.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^16.0.0-rc.0",
+    "@angular/router": "^16.0.0-rc.0",
     "@nguniversal/express-engine": "^15.0.0-rc.1",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0-next.1",
+    "@angular-devkit/build-angular": "^16.0.0-next.7",
     "@angular-eslint/builder": "14.2.0",
     "@angular-eslint/eslint-plugin": "14.2.0",
     "@angular-eslint/eslint-plugin-template": "14.2.0",
     "@angular-eslint/schematics": "14.2.0",
     "@angular-eslint/template-parser": "14.2.0",
-    "@angular/cli": "^16.0.0-next.1",
-    "@angular/compiler-cli": "^16.0.0-next.0",
-    "@angular/language-service": "^16.0.0-next.0",
+    "@angular/cli": "^16.0.0-next.7",
+    "@angular/compiler-cli": "^16.0.0-rc.0",
+    "@angular/language-service": "^16.0.0-rc.0",
     "prettier": "^2.7.1",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
@@ -59,8 +59,8 @@
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "ng-packagr": "^16.0.0-next.0",
+    "ng-packagr": "^16.0.0-rc.0",
     "ts-node": "^10.8.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.0.4"
   }
 }
