--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser": "^16.0.0-rc.0",
     "@angular/platform-browser-dynamic": "^16.0.0-rc.0",
     "@angular/router": "^16.0.0-rc.0",
-    "@nguniversal/express-engine": "^15.0.0-rc.1",
+    "@nguniversal/express-engine": "^16.0.0-next.0",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "^0.13.0"
@@ -41,20 +41,20 @@
     "@angular/cli": "^16.0.0-next.7",
     "@angular/compiler-cli": "^16.0.0-rc.0",
     "@angular/language-service": "^16.0.0-rc.0",
-    "prettier": "^2.7.1",
-    "@types/express": "^4.17.13",
+    "prettier": "^2.8.7",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint": "^8.18.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsdoc": "39.2.9",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsdoc": "41.1.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "^4.2.0",
+    "jasmine-core": "^4.6.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.0",
+    "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.1.0",
