--- a/package.json
+++ b/package.json
@@ -14,54 +14,53 @@
     "format": "prettier ./projects/**/*.{ts,js,json}",
     "format:write": "npm run format -- --write",
     "format:check": "npm run format -- --check",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "package": "ng build ngx-cookie-service --prod && cp ./README.md ./dist/ngx-cookie-service && cd dist/ngx-cookie-service && npm pack"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
-    "@nguniversal/express-engine": "^15.0.0-rc.1",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
+    "@nguniversal/express-engine": "^16.0.0-next.0",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular-devkit/build-angular": "^16.0.0",
     "@angular-eslint/builder": "14.2.0",
     "@angular-eslint/eslint-plugin": "14.2.0",
     "@angular-eslint/eslint-plugin-template": "14.2.0",
     "@angular-eslint/schematics": "14.2.0",
     "@angular-eslint/template-parser": "14.2.0",
-    "@angular/cli": "^15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
-    "@angular/language-service": "^15.0.0",
-    "prettier": "^2.7.1",
-    "@types/express": "^4.17.13",
+    "@angular/cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@angular/language-service": "^16.0.0",
+    "prettier": "^2.8.7",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint": "^8.18.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsdoc": "39.2.9",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsdoc": "41.1.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "^4.2.0",
+    "jasmine-core": "^4.6.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.0",
+    "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "ng-packagr": "^15.0.0",
+    "ng-packagr": "^16.0.0",
     "ts-node": "^10.8.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.0.4"
   }
 }
