--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,11 +9,15 @@
         "createDefaultProgram": true
       },
       "extends": [
-        "plugin:@angular-eslint/ng-cli-compat",
-        "plugin:@angular-eslint/ng-cli-compat--formatting-add-on",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "no-useless-escape": "off",
+        "no-prototype-builtins": "off",
         "@typescript-eslint/explicit-member-accessibility": [
           "off",
           {
@@ -32,7 +36,9 @@
     },
     {
       "files": ["*.html"],
-      "extends": ["plugin:@angular-eslint/template/recommended"],
+      "extends": [
+        "plugin:@angular-eslint/template/recommended",
+        "plugin:@angular-eslint/template/accessibility"],
       "rules": {}
     }
   ]
