--- a/package.json
+++ b/package.json
@@ -41,19 +41,19 @@
     "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "prettier": "^2.8.7",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.11",
     "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.38.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7",
+    "eslint": "^8.40.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsdoc": "41.1.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "ng-packagr": "^16.0.0",
+    "prettier": "^2.8.7",
     "ts-node": "^10.8.1",
     "typescript": "^5.0.4"
   }
