--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "^17.0.0-next.0",
+    "@angular/common": "^17.0.0-next.0",
+    "@angular/compiler": "^17.0.0-next.0",
+    "@angular/core": "^17.0.0-next.0",
+    "@angular/forms": "^17.0.0-next.0",
+    "@angular/platform-browser": "^17.0.0-next.0",
+    "@angular/platform-browser-dynamic": "^17.0.0-next.0",
+    "@angular/router": "^17.0.0-next.0",
     "@nguniversal/express-engine": "^16.0.0-next.0",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular-devkit/build-angular": "^16.2.0-rc.1",
     "@angular-eslint/builder": "16.0.3",
     "@angular-eslint/eslint-plugin": "16.0.3",
     "@angular-eslint/eslint-plugin-template": "16.0.3",
     "@angular-eslint/schematics": "16.0.3",
     "@angular-eslint/template-parser": "16.0.3",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
+    "@angular/cli": "^16.2.0-rc.1",
+    "@angular/compiler-cli": "^17.0.0-next.0",
+    "@angular/language-service": "^17.0.0-next.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^18.15.11",
