--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@angular/platform-browser": "^17.0.0-next.0",
     "@angular/platform-browser-dynamic": "^17.0.0-next.0",
     "@angular/router": "^17.0.0-next.0",
-    "@nguniversal/express-engine": "^16.0.0-next.0",
+    "@nguniversal/express-engine": "^16.2.0",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0-rc.1",
+    "@angular-devkit/build-angular": "^16.2.0",
     "@angular-eslint/builder": "16.0.3",
     "@angular-eslint/eslint-plugin": "16.0.3",
     "@angular-eslint/eslint-plugin-template": "16.0.3",
