--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Build
         run: pnpm run build --configuration=production && pnpm build:ngx-cookie-service-ssr --configuration=production
       - name: Test
-        run: pnpm run test --configuration=ci
+        run: pnpm run test
         env:
           CI: true
