--- a/projects/ngx-cookie-service/package.json
+++ b/projects/ngx-cookie-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-cookie-service",
   "description": "Angular cookie service",
-  "version": "19.1.2",
+  "version": "20.0.0",
   "license": "MIT",
   "author": "Stepan Suvorov <stevermeister@gmail.com>",
   "keywords": [
@@ -26,6 +26,7 @@
     "angular-17",
     "angular-18",
     "angular-19",
+    "angular-20",
     "ivy",
     "ivy-compatible",
     "ivy-compilation",
