--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "@angular/router": "^21.0.6",
     "@angular/ssr": "^21.0.4",
     "rxjs": "^7.8.2",
-    "tslib": "^2.8.0",
-    "zone.js": "^0.16.0"
+    "tslib": "^2.8.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.4",
