--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -8,14 +8,14 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: latest
       - name: Install NPM Dependencies
-        run: npm i
+        run: pnpm i
       - name: Build project
-        run: npm run build --configuration=production
+        run: pnpm build --configuration=production
       - name: Publish to NPM
         uses: JS-DevTools/npm-publish@v3
         with:
