--- a/.github/workflows/npm_publish_ssr.yml
+++ b/.github/workflows/npm_publish_ssr.yml
@@ -8,14 +8,14 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: latest
-      - name: Install NPM Dependencies
-        run: npm i
+      - name: Install Dependencies
+        run: pnpm i
       - name: Build project
-        run: npm run build:ngx-cookie-service-ssr
+        run: pnpm build:ngx-cookie-service-ssr
       - name: Publish to NPM registry
         uses: JS-DevTools/npm-publish@v3
         with:
