--- a/projects/ngx-cookie-service-ssr/tsconfig.spec.json
+++ b/projects/ngx-cookie-service-ssr/tsconfig.spec.json
@@ -3,7 +3,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
-    "types": ["node", "jasmine"]
+    "types": ["node"]
   },
   "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
